<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_bg">

    <include layout="@layout/settingbar" />
    <include layout="@layout/navbar" />

    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/activities"
        android:textColor="@color/darkThemePrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true">
        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="110dp"
            android:background="@color/greenNeon"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="linkToSteps"
            android:text="@string/step_tracking"
            android:textColor="@color/darkThemePrimary" />

        <Button
            android:id="@+id/button2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="110dp"
            android:layout_toEndOf="@+id/button1"
            android:background="@color/greenNeon"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="linkToGoals"
            android:text="@string/goals"
            android:textColor="@color/darkThemePrimary" />

        <Button
            android:id="@+id/button3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/button1"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:background="@color/greenNeon"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="linkToChallenges"
            android:text="@string/challenges"
            android:textColor="@color/darkThemePrimary" />

        <Button
            android:id="@+id/button4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/button1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/button1"
            android:background="@color/greenNeon"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="linkToFuture"
            android:text="@string/future_activities"
            android:textColor="@color/darkThemePrimary" />
    </RelativeLayout>

</RelativeLayout>