<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">

    <ImageView
        android:id="@+id/imageGarden"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/logo_trans"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="185dp"
        android:layout_below="@+id/imageGarden"
        app:srcCompat="@drawable/logo_font3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_below="@+id/imageGarden"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="@drawable/bottom_border"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:typeface="sans" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="300dp"
        android:layout_alignStart="@+id/editText"
        app:srcCompat="@drawable/white_user"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_below="@+id/imageGarden"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="131dp"
        android:background="@drawable/bottom_border"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:typeface="sans"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="32dp"
        android:layout_height="23dp"
        android:layout_marginTop="360dp"
        android:layout_alignStart="@+id/editText2"
        app:srcCompat="@drawable/white_lock"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_below="@+id/imageGarden"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="215dp"
        android:background="@color/greenNeon"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="linkToLogin"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageGarden"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="285dp"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="#FFFFFF"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageGarden"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:onClick="linkToSignUp"
        android:text="@string/new_account"
        android:textColor="@color/greenNeon"
        android:typeface="sans" />


</RelativeLayout>